--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.36.1"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
