--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
