--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "^7.13.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-loader": "^8.2.2",
+    "classnames": "^2.3.1",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
