--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
-    "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
