--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
+    "draft-js": "^0.11.7",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.2.0",
-    "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
