begin rte functionality

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "@ckeditor/ckeditor5-build-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
     "file-loader": "^6.2.0",
+    "html-react-parser": "^1.2.6",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
